<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiteFac</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="error">错误</string>
    <string name="username_empty_error">用户名不能为空</string>
    <string name="password_empty_error">密码不能为空</string>
    <string name="close">关闭</string>
    <string name="vehicle_weighing_or_work_flow_processing">该车正在称重或有工作流正在处理</string>
    <string name="refresh">刷新</string>
    <string name="choose_vehicle">第一步: 请选择车辆</string>
    <string name="choose_harbor">第二步: 请选择装卸点</string>
    <string name="choose_customer">第三步: 选择客户</string>
    <string name="take_unload_task_picture">第四步: 给货物拍照</string>
    <string name="submit">提交</string>
    <string name="unload_done">完全卸货</string>
    <string name="server_ip">地址</string>
    <string name="server_port">端口</string>
    <string name="handle_delivery_session">选择要完成的仓单</string>
    <string name="choose_order">请选择子订单</string>
    <string name="step_n">第%s步</string>
    <string name="i_see">我知道了</string>
    <string name="first">第一个</string>
    <string name="last">最后个</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="noItems">无数据</string>
    <string name="loading_data">正在载入…</string>
    <string name="title_activity_work_command">工单详情</string>
    <string name="work_command_id_and_status">工单号(状态)</string>
    <string name="order_number">订单编号</string>
    <string name="customer_name">客户名称</string>
    <string name="image">图片</string>
    <string name="pir_description">工单图片</string>
    <string name="title_activity_leader_main_activity">工单列表</string>
    <string name="please_wait">请稍等</string>
    <string name="add_weight">增加重量</string>
    <string name="quick_carryForward">快速结转</string>
    <string name="carry_forward">结转</string>
    <string name="completely_weight">完全称重</string>
    <string name="part_weight">部分称重</string>
    <string name="add_count">增加数量</string>
    <string name="processed_weight">已加工的重量</string>
    <string name="processed_weight_and_cnt">已加工的重量/数量</string>
    <string name="processed_cnt">已加工的数量</string>
    <string name="max_times">最大倍数</string>
    <string name="max_times_description">添加数量的时候，输入的数量不能大于黑件数辆的倍数</string>
    <string name="invalid_weight_data">工单%d加工后的重量不能低于0</string>
    <string name="invalid_cnt_data">工单%d加工后的数量不能低于0</string>
    <string name="too_large_data">输入的数量超过可接受范围</string>
    <string name="add_work_command_weight">正在添加重量</string>
    <string name="add_work_command_weight_success">添加重量成功</string>
    <string name="previous_weight_greater">工序前重量大于工序后重量，你确定要全部完成吗？</string>
    <string name="previous_count_greater">工序前数量大于工序后数量，你确定要全部完成吗？</string>
    <string name="please_select">请选择</string>
    <string name="invalid_quick_carryForward">工单%s快速结转失败</string>
    <string name="quick_carryForward_success">工单%s快速结转成功</string>
    <string name="end_success">工单%s结束成功</string>
    <string name="end">结束</string>
    <string name="locked_work_command_warning">已锁定的工单不能再增加重量</string>
    <string name="carryForward_success">工单%s结转成功</string>
    <string name="more">更多…</string>
    <string name="search">查询</string>
    <string name="assign">分配</string>
    <string name="off_duty">下班</string>
    <string name="logout">登出</string>
    <string name="confirm_carry_forward">确认结转工单%s？</string>
    <string name="confirm_carry_forward_quickly">确认快速结转工单%s？</string>
    <string name="confirm_end">确认结束工单%s？</string>
    <string name="confirm_off_duty">确认下班吗？</string>
    <string name="confirm_retrieve">确认回收</string>
    <string name="deny_retrieve">拒绝回收</string>
    <string name="confirm_retrieve_work_command">确认回收工单%s？</string>
    <string name="confirm_retrieve_sucess">工单%s确认回收成功</string>
    <string name="refuse_retrieval">拒绝回收工单%s？</string>
    <string name="refuse_retrieval_success">拒绝回收工单%s成功</string>
    <string name="confirm_assign">确认分配工单%s？</string>
    <string name="confirm_assign_success">工单%s分配成功</string>
    <string name="refuse">打回</string>
    <string name="confirm_refuse">确认打回工单%s？</string>
    <string name="confirm_refuse_success">打回工单%s成功</string>
    <string name="confirm_processed_weight">请确认工序后重量（公斤）</string>
    <string name="confirm_processed_quantity">请确认工序后数量（%s）</string>
    <string name="org_weight">工序前重量</string>
    <string name="org_weight_and_cnt">工序前重量/数量</string>
    <string name="org_cnt">工序前数量</string>
    <string name="exit_press_back_twice_message">再按一次返回，退出程序</string>
    <string name="load_failure">加载图片失败</string>
    <string name="product_name_and_spec_type">产品名称(规格-型号)</string>
    <string name="handleType">处理类型</string>
    <string name="procedure_and_previous">工序(上道工序)</string>
    <string name="tech_req">技术要求</string>
    <string name="status">工单状态</string>
    <string name="quality_inspecting">待质检</string>
    <string name="quality_inspected_today">今日已质检</string>
    <string name="quality_inspection_report_list">质检报告列表</string>
    <string name="work_command_detail">工单详情</string>
    <string name="new_quality_inspection_report">新建报告</string>
    <string name="complete_quality_inspection">完成质检</string>
    <string name="loading">加载中</string>
    <string name="loading_error">加载错误!请尝试刷新</string>
    <string name="warning">警告</string>
    <string name="save">保存</string>
    <string name="unsave">不保存</string>
    <string name="next_step">下一步</string>
    <string name="retrieve_quality_inspection_report">回收报告</string>
    <string name="confirm_retrieve_qi">确认回收质检结果，工单%d？</string>
    <string name="confirm_retrieve_qi_success">回收质检结果成功</string>
    <string name="order_create_date">订单创建日期</string>
    <string name="searchWorkCommand">搜索工单</string>
</resources>
