<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="服务器设定">
        <EditTextPreference
            android:key="server_ip"
            android:title="@string/server_ip"
            android:defaultValue="192.168.0.181"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:singleLine="true" />
        <EditTextPreference
            android:key="server_port"
            android:title="@string/server_port"
            android:defaultValue="80"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true" />
        <EditTextPreference
            android:key="max_times"
            android:defaultValue="2"
            android:title="@string/max_times"
            android:contentDescription="@string/max_times_description"
            android:inputType="number"
            android:singleLine="true"
            android:selectAllOnFocus="true" />
    </PreferenceCategory>
</PreferenceScreen>