<?xml version="1.0" encoding="utf-8"?>

<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/linearyLayoutError">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loading_error"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal" />

    </ScrollView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewWorkCommand"
        android:visibility="gone">

        <TableLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TableRow
                android:id="@+id/extra_row"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="@color/red"
                    android:id="@+id/extra"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/work_command_id_and_status"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/work_command_id"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/customer_name"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/product_name_and_spec_type"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/product_name_and_spec_type"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/org_weight_and_cnt_view"
                    android:text="@string/org_weight_and_cnt"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/org_weight_and_cnt"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/processed_weight_and_cnt"
                    android:id="@+id/processed_weight_and_cnt_row"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/processed_weight_and_cnt"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/order_number"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/order_number"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/order_create_date"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/order_create_date"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2"/>
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/handleType"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/handleType"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/procedure_and_previous"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/procedure_and_previous"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/tech_req"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/tech_req"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_column="2" />
            </TableRow>


            <ImageButton
                android:id="@+id/image"
                android:layout_weight=".7"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:background="@drawable/image_view_border"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayoutMask">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loading"
                android:id="@+id/textView"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>

</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>