<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:weightSum="2"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:minHeight="36dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:text="@string/processed_weight"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/dialog_add_current_weight"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView />
    </TableRow>

    <TableRow
        android:id="@+id/processed_cnt_row"
        android:layout_width="match_parent"
        android:minHeight="36dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:text="@string/processed_cnt"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/dialog_add_current_cnt"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView />
    </TableRow>

    <TableRow
        android:minHeight="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_add_weight_lable"
            android:layout_weight="1"
            android:text="@string/add_weight"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:id="@+id/dialog_add_edittext_weight"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:inputType="numberSigned"
            android:layout_gravity="center_vertical" />
    </TableRow>

    <TableRow
        android:id="@+id/count_row"
        android:minHeight="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_add_count_lable"
            android:layout_weight="1"
            android:text="@string/add_count"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/dialog_add_edittext_count"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:minWidth="100dp" />
    </TableRow>

</TableLayout>