<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayoutMask">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loading"
                android:id="@+id/textView"
                android:layout_gravity="center" />
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/linearyLayoutError">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loading_error"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal" />

    </ScrollView>


    <!-- The frame layout is here since we will be showing either
    the empty view or the list view.  -->
    <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
        android:id="@+id/ptr_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="true" />

        <!-- Here is the view to show if the list is emtpy -->
        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:scrollbars="vertical"
            android:gravity="center_horizontal"
            android:text="@string/noItems" />


    </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>


</LinearLayout>